--- a/slickmap.css
+++ b/slickmap.css
@@ -1,5 +1,5 @@
 /* ------------------------------------------------------------
-	Reset Styles (from meyerweb.com)
+	Reset Styles
 ------------------------------------------------------------ */
 
 html, body, div, span, applet, object, iframe,
@@ -22,41 +22,45 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 }
 
 /* ------------------------------------------------------------
-	NUMBER OF COLUMNS: Adjust #primaryNav li to set the number
-	of columns required in your site map. The default is 
-	4 columns (25%). 5 columns would be 20%, 6 columns would 
-	be 16.6%, etc. 
+	NUMBER OF COLUMNS: Adjust .primaryNav li to set the number
+	of columns required in your site map. The default is
+	4 columns (25%). 5 columns would be 20%, 6 columns would
+	be 16.6%, etc.
 ------------------------------------------------------------ */
 
-#primaryNav li {
-	width:25%;
+.primaryNav li {
+	width: 25%;
 }
 
-#primaryNav li ul li {
-	width:100% !important;
+.primaryNav li ul li {
+	width: 100% !important;
 }
 
-#primaryNav.col1 li { width:99.9%; }
-#primaryNav.col2 li { width:50.0%; }
-#primaryNav.col3 li { width:33.3%; }
-#primaryNav.col4 li { width:25.0%; }
-#primaryNav.col5 li { width:20.0%; }
-#primaryNav.col6 li { width:16.6%; }
-#primaryNav.col7 li { width:14.2%; }
-#primaryNav.col8 li { width:12.5%; }
-#primaryNav.col9 li { width:11.1%; }
-#primaryNav.col10 li { width:10.0%; }
+.primaryNav.col1 li { width: 99.9%; }
+.primaryNav.col2 li { width: 50.0%; }
+.primaryNav.col3 li { width: 33.3%; }
+.primaryNav.col4 li { width: 25.0%; }
+.primaryNav.col5 li { width: 20.0%; }
+.primaryNav.col6 li { width: 16.6%; }
+.primaryNav.col7 li { width: 14.2%; }
+.primaryNav.col8 li { width: 12.5%; }
+.primaryNav.col9 li { width: 11.1%; }
+.primaryNav.col10 li { width: 10.0%; }
 
 /* ------------------------------------------------------------
 	General Styles
 ------------------------------------------------------------ */
 
+* {
+	box-sizing: border-box;
+}
+
 body {
+	font-family: Helvetica, Arial, sans-serif;
 	background: white;
 	color: black;
 	padding: 40px;
-	font-family: Gotham, Helvetica, Arial, sans-serif;
-	font-size: 12px;
+	font-size: 16px;
 	line-height: 1;
 }
 .sitemap {
@@ -71,8 +75,7 @@ h1 {
 	margin: 0 0 5px 0;
 }
 h2 {
-	font-family: "Lucida Grande", Verdana, sans-serif;
-	font-size: 10px;
+	font-size: 11px;
 	color: #777777;
 	margin: 0 0 20px 0;
 }
@@ -83,6 +86,128 @@ ol, ul {
 	list-style: none;
 }
 
+/* ------------------------------------------------------------
+	Lines
+------------------------------------------------------------ */
+
+.primaryNav li:before,
+.primaryNav li:after  {
+	display: block;
+	content: '';
+	position: absolute;
+	border-width: 0;
+	border-color: #dddddd;
+	border-style: solid;
+	box-sizing: border-box;
+}
+.primaryNav li:before {
+  width: 100%;
+  height: 15px;
+  top: 14.5px;
+  left: 0;
+  border-top-width: 1px;
+}
+.primaryNav li:after {
+  width: 50%;
+  height: 15px;
+  top: 15px;
+  right: 0.5px;
+  border-left-width: 1px;
+}
+.primaryNav > li:last-child:before {
+  width: -webkit-calc(50% + 0.5px);
+  width: calc(50% + 0.5px);
+  height: 15.5px;
+  top: 14.5px;
+  border-top-width: 1px;
+  border-right-width: 1px;
+}
+.primaryNav > li:last-child:after {
+  display: none;
+}
+
+
+.primaryNav li li:before {
+  width: -webkit-calc(50% + 0.5px);
+  width: calc(50% + 0.5px);
+  height: 10px;
+  border-top-width: 0;
+  border-right-width: 1px;
+  top: 0;
+  bottom: auto;
+}
+.primaryNav li li:after {
+  display: none;
+}
+.primaryNav li li:first-child {
+  padding-top: 30px;
+}
+.primaryNav li li:first-child:before {
+  height: 30px;
+}
+
+
+
+.primaryNav li li ul:before,
+.primaryNav li li ul:after {
+  display: block;
+  content: '';
+  position: absolute;
+  border-width: 0;
+  border-color: gray;
+  border-style: solid;
+  box-sizing: border-box;
+}
+
+.primaryNav li li ul:before {
+  width: -webkit-calc(50% + 0.5px);
+  width: calc(50% + 0.5px);
+  height: 15.5px;
+  border-right-width: 1px;
+  border-bottom-width: 1px;
+  top: 0;
+}
+
+.primaryNav li li ul:after {
+  width: 100%;
+  height: 10px;
+  border-left-width: 1px;
+  top: 15px;
+}
+
+
+
+.primaryNav li li li:before {
+  left: 0;
+  height: 100%;
+  width: 15%;
+  border-left-width: 1px;
+  border-right-width: 0;
+}
+
+.primaryNav li li li:after {
+  display: block;
+  left: 0;
+  right: auto;
+  top: 0;
+  width: 15%;
+  height: -webkit-calc(50% + 0.5px);
+  height: calc(50% + 0.5px);
+  border-left-width: 0;
+  border-bottom-width: 1px;
+}
+
+.primaryNav li li li:first-child:before {
+  height: 100%;
+}
+
+.primaryNav li li li:last-child {
+  margin-bottom: 5px;
+}
+
+.primaryNav li li li:last-child:before {
+  height: 50%;
+}
 
 /* ------------------------------------------------------------
 	Site Map Styles
@@ -90,46 +215,53 @@ ol, ul {
 
 /* --------	Top Level --------- */
 
-#primaryNav {
+.primaryNav {
 	margin: 0;
 	float: left;
 	width: 100%;
 }
-#primaryNav #home {
+.primaryNav .primaryNav__home {
 	display: block;
 	float: none;
-	background: #ffffff url('images/L1-left.png') center bottom no-repeat;
+	//background: #ffffff url('images/L1-left.png') center bottom no-repeat;
 	position: relative;
 	z-index: 2;
 	padding: 0 0 30px 0;
 }
-#primaryNav li {
-	float: left;
-	background: url('images/L1-center.png') center top no-repeat;
-	padding: 30px 0;
-	margin-top: -30px;
+.primaryNav .primaryNav__home:after {
+  width: 50%;
+  height: 15px;
+  top: auto;
+  bottom: 0.5px;
+  right: 0;
+  border-top-width: 1px;
+  border-left-width: 0;
 }
-#primaryNav li a {
+.primaryNav li {
+	float: left;
+	padding: 30px 15px;
+	margin-top: -30px;
+	position: relative;
+}
+.primaryNav li a {
 	margin: 0 20px 0 0;
-	padding: 10px 0;
+	padding: 10px;
 	display: block;
 	font-size: 14px;
 	font-weight: bold;
 	text-align: center;
-	color: black;	
+	color: black;
 	background: #c3eafb url('images/white-highlight.png') top left repeat-x;
 	border: 2px solid #b5d9ea;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-webkit-box-shadow: rgba(0,0,0,0.5) 2px 2px 2px; 
-	-moz-box-shadow: rgba(0,0,0,0.5) 2px 2px 2px; /* FF 3.5+ */	
+	border-radius: 5px;
+	box-shadow: rgba(0,0,0,0.5) 2px 2px 2px; /* FF 3.5+ */
 }
-#primaryNav li a:hover {
+.primaryNav li a:hover {
 	background-color: #e2f4fd;
 	border-color: #97bdcf;
 }
-#primaryNav li:last-child {
-	background: url('images/L1-right.png') center top no-repeat;
+.primaryNav li:last-child {
+	//background: url('images/L1-right.png') center top no-repeat;
 }
 a:link:before,
 a:visited:before {
@@ -140,53 +272,53 @@ a:visited:before {
 	margin-bottom: 5px;
 	word-wrap: break-word;
 }
-#primaryNav li a:link:before,
-#primaryNav li a:visited:before {
+.primaryNav li a:link:before,
+.primaryNav li a:visited:before {
 	color: #78a9c0;
 }
 
 /* --------	Second Level --------- */
 
-#primaryNav li li {
+.primaryNav li li {
 	width: 100%;
 	clear: left;
 	margin-top: 0;
 	padding: 10px 0 0 0;
-	background: url('images/vertical-line.png') center bottom repeat-y;
+	//background: url('images/vertical-line.png') center bottom repeat-y;
 }
-#primaryNav li li a {
+.primaryNav li li a {
 	background-color: #cee3ac;
 	border-color: #b8da83;
 }
-#primaryNav li li a:hover {
+.primaryNav li li a:hover {
 	border-color: #94b75f;
 	background-color: #e7f1d7;
 }
-#primaryNav li li:first-child {
+.primaryNav li li:first-child {
 	padding-top: 30px;
 }
-#primaryNav li li:last-child {
-	background: url('images/vertical-line.png') center bottom repeat-y;
+.primaryNav li li:last-child {
+	//background: url('images/vertical-line.png') center bottom repeat-y;
 }
-#primaryNav li li a:link:before,
-#primaryNav li li a:visited:before {
+.primaryNav li li a:link:before,
+.primaryNav li li a:visited:before {
 	color: #8faf5c;
 }
 
 /* --------	Third Level --------- */
 
-#primaryNav li li ul {
+.primaryNav li li ul {
 	margin: 10px 0 0 0;
 	width: 100%;
 	float: right;
 	padding: 9px 0 10px 0;
-	background: #ffffff url('images/L3-ul-top.png') center top no-repeat;
+	//background: #ffffff url('images/L3-ul-top.png') center top no-repeat;
 }
-#primaryNav li li li {
-	background: url('images/L3-center.png') left center no-repeat;
+.primaryNav li li li {
+	//background: url('images/L3-center.png') left center no-repeat;
 	padding: 5px 0;
 }
-#primaryNav li li li a {
+.primaryNav li li li a {
 	background-color: #fff7aa;
 	border-color: #e3ca4b;
 	font-size: 12px;
@@ -194,19 +326,19 @@ a:visited:before {
 	width: 80%;
 	float: right;
 }
-#primaryNav li li li a:hover {
+.primaryNav li li li a:hover {
 	background-color: #fffce5;
 	border-color: #d1b62c;
 }
-#primaryNav li li li:first-child {
+.primaryNav li li li:first-child {
 	padding: 15px 0 5px 0;
-	background: url('images/L3-li-top.png') left center no-repeat;
+	//background: url('images/L3-li-top.png') left center no-repeat;
 }
-#primaryNav li li li:last-child {
-	background: url('images/L3-bottom.png') left center no-repeat;
+.primaryNav li li li:last-child {
+	//background: url('images/L3-bottom.png') left center no-repeat;
 }
-#primaryNav li li li a:link:before,
-#primaryNav li li li a:visited:before {
+.primaryNav li li li a:link:before,
+.primaryNav li li li a:visited:before {
 	color: #ccae14;
 	font-size: 9px;
 }
@@ -216,36 +348,34 @@ a:visited:before {
 	Utility Navigation
 ------------------------------------------------------------ */
 
-#utilityNav {
+.utilityNav {
 	float: right;
 	max-width: 50%;
 	margin-right: 10px;
 }
-#utilityNav li {
+.utilityNav li {
 	float: left;
 	margin-bottom: 10px;
 }
-#utilityNav li a {
+.utilityNav li a {
 	margin: 0 10px 0 0;
 	padding: 5px 10px;
-	display: block;	
+	display: block;
 	border: 2px solid #e3ca4b;
 	font-size: 12px;
 	font-weight: bold;
 	text-align: center;
 	color: black;
 	background: #fff7aa url('images/white-highlight.png') top left repeat-x;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-webkit-box-shadow: rgba(0,0,0,0.5) 2px 2px 2px; 
-	-moz-box-shadow: rgba(0,0,0,0.5) 2px 2px 2px; /* FF 3.5+ */	
+	border-radius: 5px;
+	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
-#utilityNav li a:hover {
+.utilityNav li a:hover {
 	background-color: #fffce5;
 	border-color: #d1b62c;
 }
-#utilityNav li a:link:before,
-#utilityNav li a:visited:before {
+.utilityNav li a:link:before,
+.utilityNav li a:visited:before {
 	color: #ccae14;
 	font-size: 9px;
 	margin-bottom: 3px;
