--- a/slickmap.css
+++ b/slickmap.css
@@ -22,32 +22,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 }
 
 /* ------------------------------------------------------------
-	NUMBER OF COLUMNS: Adjust .primaryNav li to set the number
-	of columns required in your site map. The default is
-	4 columns (25%). 5 columns would be 20%, 6 columns would
-	be 16.6%, etc.
------------------------------------------------------------- */
-
-.primaryNav li {
-	width: 25%;
-}
-
-.primaryNav li ul li {
-	width: 100% !important;
-}
-
-.primaryNav.col1 li { width: 99.9%; }
-.primaryNav.col2 li { width: 50.0%; }
-.primaryNav.col3 li { width: 33.3%; }
-.primaryNav.col4 li { width: 25.0%; }
-.primaryNav.col5 li { width: 20.0%; }
-.primaryNav.col6 li { width: 16.6%; }
-.primaryNav.col7 li { width: 14.2%; }
-.primaryNav.col8 li { width: 12.5%; }
-.primaryNav.col9 li { width: 11.1%; }
-.primaryNav.col10 li { width: 10.0%; }
-
-/* ------------------------------------------------------------
 	General Styles
 ------------------------------------------------------------ */
 
@@ -59,25 +33,23 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	background: white;
 	color: black;
-	padding: 40px;
 	font-size: 16px;
 	line-height: 1;
+	padding: 2em;
 }
 .sitemap {
-	margin: 0 0 40px 0;
-	float: left;
-	width: 100%;
+	margin: 0 0 2em 0;
+
 }
 h1 {
 	font-weight: bold;
-	text-transform: uppercase;
-	font-size: 20px;
-	margin: 0 0 5px 0;
+	font-size: 1.25em;
+	margin: 0 0 .25em 0;
 }
 h2 {
-	font-size: 11px;
+	font-size: .75em;
 	color: #777777;
-	margin: 0 0 20px 0;
+	margin: 0 0 1.25em 0;
 }
 a {
 	text-decoration: none;
@@ -90,124 +62,149 @@ ol, ul {
 	Lines
 ------------------------------------------------------------ */
 
-.primaryNav li:before,
-.primaryNav li:after  {
+.primaryNav ul li:before,
+.primaryNav ul li:after {
 	display: block;
 	content: '';
 	position: absolute;
 	border-width: 0;
-	border-color: #dddddd;
+	border-color: rgba(0,0,0,.1);
+	//border-color: red;
 	border-style: solid;
-	box-sizing: border-box;
-}
-.primaryNav li:before {
-  width: 100%;
-  height: 15px;
-  top: 14.5px;
-  left: 0;
-  border-top-width: 1px;
-}
-.primaryNav li:after {
-  width: 50%;
-  height: 15px;
-  top: 15px;
-  right: 0.5px;
-  border-left-width: 1px;
-}
-.primaryNav > li:last-child:before {
-  width: -webkit-calc(50% + 0.5px);
-  width: calc(50% + 0.5px);
-  height: 15.5px;
-  top: 14.5px;
-  border-top-width: 1px;
-  border-right-width: 1px;
-}
-.primaryNav > li:last-child:after {
-  display: none;
 }
 
-
-.primaryNav li li:before {
-  width: -webkit-calc(50% + 0.5px);
-  width: calc(50% + 0.5px);
-  height: 10px;
-  border-top-width: 0;
-  border-right-width: 1px;
-  top: 0;
-  bottom: auto;
-}
-.primaryNav li li:after {
-  display: none;
-}
-.primaryNav li li:first-child {
-  padding-top: 30px;
-}
-.primaryNav li li:first-child:before {
-  height: 30px;
+.primaryNav ul ul li:after {
+	width: 50%;
+	height: .6875em;
+	top: 0;
+	right: 1px;
+	border-left-width: 2px;
+	//display: block;
+	//width: 100%;
+	// width: 100%;
+	// clear: left;
+	// margin-top: 0;
+	//background: url('images/vertical-line.png') center bottom repeat-y;
 }
 
+// .primaryNav li:before,
+// .primaryNav li:after  {
+// 	display: block;
+// 	content: '';
+// 	position: absolute;
+// 	border-width: 0;
+// 	border-color: #dddddd;
+// 	border-style: solid;
+// 	box-sizing: border-box;
+// }
+// .primaryNav li:before {
+//   width: 100%;
+//   height: 15px;
+//   top: 14.5px;
+//   left: 0;
+//   border-top-width: 1px;
+// }
+// .primaryNav li:after {
+//   width: 50%;
+//   height: 15px;
+//   top: 15px;
+//   right: 0.5px;
+//   border-left-width: 1px;
+// }
+// .primaryNav > li:last-child:before {
+//   width: -webkit-calc(50% + 0.5px);
+//   width: calc(50% + 0.5px);
+//   height: 15.5px;
+//   top: 14.5px;
+//   border-top-width: 1px;
+//   border-right-width: 1px;
+// }
+// .primaryNav > li:last-child:after {
+//   display: none;
+// }
 
 
-.primaryNav li li ul:before,
-.primaryNav li li ul:after {
-  display: block;
-  content: '';
-  position: absolute;
-  border-width: 0;
-  border-color: gray;
-  border-style: solid;
-  box-sizing: border-box;
-}
-
-.primaryNav li li ul:before {
-  width: -webkit-calc(50% + 0.5px);
-  width: calc(50% + 0.5px);
-  height: 15.5px;
-  border-right-width: 1px;
-  border-bottom-width: 1px;
-  top: 0;
-}
-
-.primaryNav li li ul:after {
-  width: 100%;
-  height: 10px;
-  border-left-width: 1px;
-  top: 15px;
-}
+// .primaryNav li li:before {
+//   width: -webkit-calc(50% + 0.5px);
+//   width: calc(50% + 0.5px);
+//   height: 10px;
+//   border-top-width: 0;
+//   border-right-width: 1px;
+//   top: 0;
+//   bottom: auto;
+// }
+// .primaryNav li li:after {
+//   display: none;
+// }
+// .primaryNav li li:first-child {
+//   padding-top: 30px;
+// }
+// .primaryNav li li:first-child:before {
+//   height: 30px;
+// }
 
 
 
-.primaryNav li li li:before {
-  left: 0;
-  height: 100%;
-  width: 15%;
-  border-left-width: 1px;
-  border-right-width: 0;
-}
+// .primaryNav li li ul:before,
+// .primaryNav li li ul:after {
+//   display: block;
+//   content: '';
+//   position: absolute;
+//   border-width: 0;
+//   border-color: gray;
+//   border-style: solid;
+//   box-sizing: border-box;
+// }
 
-.primaryNav li li li:after {
-  display: block;
-  left: 0;
-  right: auto;
-  top: 0;
-  width: 15%;
-  height: -webkit-calc(50% + 0.5px);
-  height: calc(50% + 0.5px);
-  border-left-width: 0;
-  border-bottom-width: 1px;
-}
+// .primaryNav li li ul:before {
+//   width: -webkit-calc(50% + 0.5px);
+//   width: calc(50% + 0.5px);
+//   height: 15.5px;
+//   border-right-width: 1px;
+//   border-bottom-width: 1px;
+//   top: 0;
+// }
 
-.primaryNav li li li:first-child:before {
-  height: 100%;
-}
+// .primaryNav li li ul:after {
+//   width: 100%;
+//   height: 10px;
+//   border-left-width: 1px;
+//   top: 15px;
+// }
 
-.primaryNav li li li:last-child {
-  margin-bottom: 5px;
-}
 
-.primaryNav li li li:last-child:before {
-  height: 50%;
-}
+
+// .primaryNav li li li:before {
+//   left: 0;
+//   height: 100%;
+//   width: 15%;
+//   border-left-width: 1px;
+//   border-right-width: 0;
+// }
+
+// .primaryNav li li li:after {
+//   display: block;
+//   left: 0;
+//   right: auto;
+//   top: 0;
+//   width: 15%;
+//   height: -webkit-calc(50% + 0.5px);
+//   height: calc(50% + 0.5px);
+//   border-left-width: 0;
+//   border-bottom-width: 1px;
+// }
+
+// .primaryNav li li li:first-child:before {
+//   height: 100%;
+// }
+
+// .primaryNav li li li:last-child {
+//   margin-bottom: 5px;
+// }
+
+// .primaryNav li li li:last-child:before {
+//   height: 50%;
+// }
 
 /* ------------------------------------------------------------
 	Site Map Styles
@@ -216,11 +213,9 @@ ol, ul {
 /* --------	Top Level --------- */
 
 .primaryNav {
-	margin: 0;
-	float: left;
-	width: 100%;
+
 }
-.primaryNav .primaryNav__home {
+.primaryNav #home {
 	display: block;
 	float: none;
 	//background: #ffffff url('images/L1-left.png') center bottom no-repeat;
@@ -229,22 +224,28 @@ ol, ul {
 	padding: 0 0 30px 0;
 }
 .primaryNav .primaryNav__home:after {
-  width: 50%;
-  height: 15px;
-  top: auto;
-  bottom: 0.5px;
-  right: 0;
-  border-top-width: 1px;
-  border-left-width: 0;
+	width: 50%;
+	height: 15px;
+	top: auto;
+	bottom: 0.5px;
+	right: 0;
+	border-top-width: 1px;
+	border-left-width: 0;
+}
+.primaryNav ul {
+	display: flex;
+	//width: 100%;
 }
 .primaryNav li {
-	float: left;
-	padding: 30px 15px;
-	margin-top: -30px;
+	flex-grow: 1;
+	padding-right: 20px;
 	position: relative;
+	//padding: 30px 0px;
+	//margin-top: -30px;
 }
 .primaryNav li a {
-	margin: 0 20px 0 0;
+	margin: 0;
+	//margin-right: 20px;
 	padding: 10px;
 	display: block;
 	font-size: 14px;
@@ -254,7 +255,7 @@ ol, ul {
 	background: #c3eafb url('images/white-highlight.png') top left repeat-x;
 	border: 2px solid #b5d9ea;
 	border-radius: 5px;
-	box-shadow: rgba(0,0,0,0.5) 2px 2px 2px; /* FF 3.5+ */
+	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 .primaryNav li a:hover {
 	background-color: #e2f4fd;
@@ -279,11 +280,17 @@ a:visited:before {
 
 /* --------	Second Level --------- */
 
-.primaryNav li li {
-	width: 100%;
-	clear: left;
-	margin-top: 0;
-	padding: 10px 0 0 0;
+.primaryNav ul ul {
+	display: block;
+}
+.primaryNav ul ul li {
+	padding-top: .6875em;
+	padding-right: 0;
+	//display: block;
+	//width: 100%;
+	// width: 100%;
+	// clear: left;
+	// margin-top: 0;
 	//background: url('images/vertical-line.png') center bottom repeat-y;
 }
 .primaryNav li li a {
@@ -307,40 +314,40 @@ a:visited:before {
 
 /* --------	Third Level --------- */
 
-.primaryNav li li ul {
-	margin: 10px 0 0 0;
-	width: 100%;
-	float: right;
-	padding: 9px 0 10px 0;
-	//background: #ffffff url('images/L3-ul-top.png') center top no-repeat;
+.primaryNav ul ul ul {
+	margin-top: .6em;
+	padding-top: .6em;
+	padding-bottom: .625em;
 }
-.primaryNav li li li {
-	//background: url('images/L3-center.png') left center no-repeat;
-	padding: 5px 0;
+.primaryNav ul ul ul li {
+	padding-top: .3125em;
+	padding-bottom: .3125em;
 }
-.primaryNav li li li a {
+.primaryNav ul ul ul li a {
 	background-color: #fff7aa;
 	border-color: #e3ca4b;
-	font-size: 12px;
-	padding: 5px 0;
+	font-size: .75em;
+	padding: .5em 0;
 	width: 80%;
-	float: right;
+		margin-right: 0;
+	margin-left: auto;
+
 }
-.primaryNav li li li a:hover {
+.primaryNav ul ul ul li a:hover {
 	background-color: #fffce5;
 	border-color: #d1b62c;
 }
-.primaryNav li li li:first-child {
-	padding: 15px 0 5px 0;
+.primaryNav ul ul ul li:first-child {
+	padding-top: 1em;
 	//background: url('images/L3-li-top.png') left center no-repeat;
 }
-.primaryNav li li li:last-child {
+.primaryNav ul ul ul li:last-child {
 	//background: url('images/L3-bottom.png') left center no-repeat;
 }
-.primaryNav li li li a:link:before,
-.primaryNav li li li a:visited:before {
+.primaryNav ul ul ul li a:link:before,
+.primaryNav ul ul ul li a:visited:before {
 	color: #ccae14;
-	font-size: 9px;
+	font-size: .75em;
 }
 
 
@@ -349,12 +356,12 @@ a:visited:before {
 ------------------------------------------------------------ */
 
 .utilityNav {
-	float: right;
+	//float: right;
 	max-width: 50%;
 	margin-right: 10px;
 }
 .utilityNav li {
-	float: left;
+	//float: left;
 	margin-bottom: 10px;
 }
 .utilityNav li a {
