--- a/slickmap.css
+++ b/slickmap.css
@@ -51,6 +51,12 @@ h2 {
 	color: #777777;
 	margin: 0 0 1.25em 0;
 }
+h2 a {
+	color: #777777;
+}
+h2 a:hover {
+	color: #555555;
+}
 a {
 	text-decoration: none;
 }
@@ -75,11 +81,21 @@ ol, ul {
 	z-index: -1;
 	// border-color: red;
 }
+.primaryNav > ul > li:first-child:before {
+	height: 2.5em;
+	// width: calc(50% - .625em);
+	width: 2.5em;
+	top: -5em;
+	left: 0;
+	border-width: 2px;
+	content: "Home";
+	// border-color: red;
+}
 .primaryNav > ul > li:after {
 	height: 1.75em;
 	top: 0;
 	right: 0;
-	width: 1.25em; 
+	width: 1.25em;
 	border-bottom-width: 2px;
 	// border-color: red;
 }
@@ -89,7 +105,7 @@ ol, ul {
 	top: 0;
 	right: 1px;
 	border-left-width: 2px;
-	// border-color: red;
+	//border-color: red;
 }
 .primaryNav ul ul li:first-child:before {
 	top: .6875em;
@@ -256,40 +272,36 @@ ol, ul {
 /* --------	Top Level --------- */
 
 .primaryNav {
-
+	clear: both;
 }
 .primaryNav #home {
-	display: block;
-	float: none;
-	//background: #ffffff url('images/L1-left.png') center bottom no-repeat;
-	position: relative;
-	z-index: 2;
-	padding: 0 0 30px 0;
+
 }
-.primaryNav .primaryNav__home:after {
-	width: 50%;
-	height: 15px;
-	top: auto;
-	bottom: 0.5px;
-	right: 0;
-	border-top-width: 1px;
-	border-left-width: 0;
+.primaryNav #home:after {
+
 }
+.primaryNav #home + li {
+
+}
+
 .primaryNav ul {
 	display: flex;
+	flex-wrap: wrap;
 	position: relative;
-	//width: 100%;
 }
 .primaryNav li {
-	flex-grow: 1;
+	flex: 1;
 	padding-right: 1.25em;
 	position: relative;
-	//padding: 30px 0px;
-	//margin-top: -30px;
+}
+.primaryNav > ul > li {
+	margin-top: 3em;
+}
+.primaryNav > ul > li:last-child {
+	//padding-right: 0;
 }
 .primaryNav li a {
 	margin: 0;
-	//margin-right: 20px;
 	padding: 10px;
 	display: block;
 	font-size: 14px;
@@ -327,12 +339,7 @@ a:visited:before {
 .primaryNav ul ul li {
 	padding-top: .6875em;
 	padding-right: 0;
-	//display: block;
-	//width: 100%;
-	// width: 100%;
-	// clear: left;
-	// margin-top: 0;
-	//background: url('images/vertical-line.png') center bottom repeat-y;
+
 }
 .primaryNav ul ul li a {
 	background-color: #cee3ac;
@@ -346,7 +353,6 @@ a:visited:before {
 	padding-top: 2em;
 }
 .primaryNav ul ul li:last-child {
-	//background: url('images/vertical-line.png') center bottom repeat-y;
 }
 .primaryNav ul ul li a:link:before,
 .primaryNav ul ul li a:visited:before {
@@ -372,7 +378,6 @@ a:visited:before {
 	width: 90%;
 	margin-right: 0;
 	margin-left: auto;
-
 }
 .primaryNav ul ul ul li a:hover {
 	background-color: #fffce5;
@@ -380,10 +385,6 @@ a:visited:before {
 }
 .primaryNav ul ul ul li:first-child {
 	padding-top: 1em;
-	//background: url('images/L3-li-top.png') left center no-repeat;
-}
-.primaryNav ul ul ul li:last-child {
-	//background: url('images/L3-bottom.png') left center no-repeat;
 }
 .primaryNav ul ul ul li a:link:before,
 .primaryNav ul ul ul li a:visited:before {
@@ -397,20 +398,23 @@ a:visited:before {
 ------------------------------------------------------------ */
 
 .utilityNav {
-	//float: right;
-	max-width: 50%;
-	margin-right: 10px;
+	float: right;
+	//margin-top: -3em;
+	margin-top: 1em;
+	margin-bottom: -1em;
+	margin-right: 1.25em;
 }
 .utilityNav li {
-	//float: left;
-	margin-bottom: 10px;
+	padding: 0 0 .625em .625em;
+	display: inline-block;
+}
+.utilityNav li:first-child {
 }
 .utilityNav li a {
-	margin: 0 10px 0 0;
-	padding: 5px 10px;
 	display: block;
 	border: 2px solid #e3ca4b;
-	font-size: 12px;
+	font-size: .75em;
+	padding: .5em 1em;
 	font-weight: bold;
 	text-align: center;
 	color: black;
@@ -425,6 +429,6 @@ a:visited:before {
 .utilityNav li a:link:before,
 .utilityNav li a:visited:before {
 	color: #ccae14;
-	font-size: 9px;
-	margin-bottom: 3px;
+	font-size: .75em;
+
 }
