--- a/slickmap.css
+++ b/slickmap.css
@@ -82,14 +82,7 @@ ol, ul {
 	// border-color: red;
 }
 .primaryNav > ul > li:first-child:before {
-	height: 2.5em;
-	// width: calc(50% - .625em);
-	width: 2.5em;
-	top: -5em;
-	left: 0;
-	border-width: 2px;
-	content: "Home";
-	// border-color: red;
+
 }
 .primaryNav > ul > li:after {
 	height: 1.75em;
@@ -275,6 +268,10 @@ ol, ul {
 	clear: both;
 }
 .primaryNav #home {
+	position: absolute;
+	margin-top: -50px;
+	//margin-right: -25%;
+	//width: 25%;
 
 }
 .primaryNav #home:after {
@@ -403,6 +400,7 @@ a:visited:before {
 	margin-top: 1em;
 	margin-bottom: -1em;
 	margin-right: 1.25em;
+	max-width: 50%;
 }
 .utilityNav li {
 	padding: 0 0 .625em .625em;
