--- a/slickmap.css
+++ b/slickmap.css
@@ -81,15 +81,27 @@ ol, ul {
 	z-index: -1;
 	// border-color: red;
 }
-.primaryNav > ul > li:first-child:before {
-
+.primaryNav > ul > li:before {
+	height: 1.375em;
+	top: -1.375em;;
+	right: calc(50% + .625em);
+	width: calc(100% - 2px);
+	border-top-width: 2px;
+	border-right-width: 2px;
+	// border-color: red;
+}
+.primaryNav > ul > li:first-child + li:before {
+	border-top-width: 0;
+	height: 5em;
+	top: -5em;
+	// border-color: red;
 }
 .primaryNav > ul > li:after {
-	height: 1.75em;
-	top: 0;
-	right: 0;
-	width: 1.25em;
-	border-bottom-width: 2px;
+	// height: 1.75em;
+	// top: 0;
+	// right: 0;
+	// width: 1.25em;
+	// border-bottom-width: 2px;
 	// border-color: red;
 }
 .primaryNav ul ul li:after {
@@ -269,10 +281,15 @@ ol, ul {
 }
 .primaryNav #home {
 	position: absolute;
-	margin-top: -50px;
+	margin-top: -3em;
+	min-width: 11.5em;
+	width: 25%;
 	//margin-right: -25%;
 	//width: 25%;
 
+}
+.primaryNav #home:before {
+	display: none;
 }
 .primaryNav #home:after {
 
@@ -288,6 +305,7 @@ ol, ul {
 }
 .primaryNav li {
 	flex: 1;
+	flex-basis: 11.5em;
 	padding-right: 1.25em;
 	position: relative;
 }
@@ -397,10 +415,10 @@ a:visited:before {
 .utilityNav {
 	float: right;
 	//margin-top: -3em;
-	margin-top: 1em;
-	margin-bottom: -1em;
+	margin-top: 0em;
+	margin-bottom: 0;
 	margin-right: 1.25em;
-	max-width: 50%;
+	max-width: 48%;
 }
 .utilityNav li {
 	padding: 0 0 .625em .625em;
