--- a/slickmap.css
+++ b/slickmap.css
@@ -77,6 +77,7 @@ ol, ul {
 	position: absolute;
 	border-width: 0;
 	border-color: rgba(0,0,0,.1);
+	border-color: #e5e5e5;
 	border-style: solid;
 	z-index: -1;
 	// border-color: red;
@@ -151,124 +152,6 @@ ol, ul {
 	border-width: 0;
 }
 
-// .primaryNav li:before,
-// .primaryNav li:after  {
-// 	display: block;
-// 	content: '';
-// 	position: absolute;
-// 	border-width: 0;
-// 	border-color: #dddddd;
-// 	border-style: solid;
-// 	box-sizing: border-box;
-// }
-// .primaryNav li:before {
-//   width: 100%;
-//   height: 15px;
-//   top: 14.5px;
-//   left: 0;
-//   border-top-width: 1px;
-// }
-// .primaryNav li:after {
-//   width: 50%;
-//   height: 15px;
-//   top: 15px;
-//   right: 0.5px;
-//   border-left-width: 1px;
-// }
-// .primaryNav > li:last-child:before {
-//   width: -webkit-calc(50% + 0.5px);
-//   width: calc(50% + 0.5px);
-//   height: 15.5px;
-//   top: 14.5px;
-//   border-top-width: 1px;
-//   border-right-width: 1px;
-// }
-// .primaryNav > li:last-child:after {
-//   display: none;
-// }
-
-
-// .primaryNav li li:before {
-//   width: -webkit-calc(50% + 0.5px);
-//   width: calc(50% + 0.5px);
-//   height: 10px;
-//   border-top-width: 0;
-//   border-right-width: 1px;
-//   top: 0;
-//   bottom: auto;
-// }
-// .primaryNav li li:after {
-//   display: none;
-// }
-// .primaryNav li li:first-child {
-//   padding-top: 30px;
-// }
-// .primaryNav li li:first-child:before {
-//   height: 30px;
-// }
-
-
-
-// .primaryNav li li ul:before,
-// .primaryNav li li ul:after {
-//   display: block;
-//   content: '';
-//   position: absolute;
-//   border-width: 0;
-//   border-color: gray;
-//   border-style: solid;
-//   box-sizing: border-box;
-// }
-
-// .primaryNav li li ul:before {
-//   width: -webkit-calc(50% + 0.5px);
-//   width: calc(50% + 0.5px);
-//   height: 15.5px;
-//   border-right-width: 1px;
-//   border-bottom-width: 1px;
-//   top: 0;
-// }
-
-// .primaryNav li li ul:after {
-//   width: 100%;
-//   height: 10px;
-//   border-left-width: 1px;
-//   top: 15px;
-// }
-
-
-
-// .primaryNav li li li:before {
-//   left: 0;
-//   height: 100%;
-//   width: 15%;
-//   border-left-width: 1px;
-//   border-right-width: 0;
-// }
-
-// .primaryNav li li li:after {
-//   display: block;
-//   left: 0;
-//   right: auto;
-//   top: 0;
-//   width: 15%;
-//   height: -webkit-calc(50% + 0.5px);
-//   height: calc(50% + 0.5px);
-//   border-left-width: 0;
-//   border-bottom-width: 1px;
-// }
-
-// .primaryNav li li li:first-child:before {
-//   height: 100%;
-// }
-
-// .primaryNav li li li:last-child {
-//   margin-bottom: 5px;
-// }
-
-// .primaryNav li li li:last-child:before {
-//   height: 50%;
-// }
 
 /* ------------------------------------------------------------
 	Site Map Styles
@@ -278,16 +161,15 @@ ol, ul {
 
 .primaryNav {
 	clear: both;
+	width: 100%;
 }
 .primaryNav #home {
-	position: absolute;
-	margin-top: -3em;
-	min-width: 11.5em;
-	width: 25%;
-	//margin-right: -25%;
-	//width: 25%;
-
-}
+		position: absolute;
+		margin-top: -3em;
+		margin-bottom: 0;
+		min-width: 11.5em;
+		width: 100%;
+	}
 .primaryNav #home:before {
 	display: none;
 }
@@ -297,7 +179,6 @@ ol, ul {
 .primaryNav #home + li {
 
 }
-
 .primaryNav ul {
 	display: flex;
 	flex-wrap: wrap;
@@ -414,9 +295,8 @@ a:visited:before {
 
 .utilityNav {
 	float: right;
-	//margin-top: -3em;
-	margin-top: 0em;
-	margin-bottom: 0;
+	margin-top: 0;
+	margin-bottom: -.25em;
 	margin-right: 1.25em;
 	max-width: 48%;
 }
@@ -446,5 +326,70 @@ a:visited:before {
 .utilityNav li a:visited:before {
 	color: #ccae14;
 	font-size: .75em;
+}
 
+/* ------------------------------------------------------------
+	Responsive Styles
+------------------------------------------------------------ */
+
+@media screen and (max-width: 30em) {
+	.primaryNav ul {
+		display: block;
+	}
+	.primaryNav li {
+		width: 100%;
+		padding-right: 0;
+	}
+	.primaryNav #home {
+		width: 100%;
+		position: relative;
+		margin-bottom: -1em;
+		margin-top: 0;
+	}
+	.utilityNav {
+		float: none;
+		display: block;
+		width: 100%;
+		text-align: right;
+		margin-bottom: 2.5em;
+		max-width: 100%;
+	}
+}
+
+/* The media queries below keep grid column widths intact 
+when the page wraps to avoid them having a 100% width. 
+These queries also make the homepage line item flex appropriately.
+For optimal layout, remove the queries you don't need. */
+
+/* three column */
+@media screen and (min-width: 30em) {
+	.primaryNav > ul > li {	max-width: 50%;	}
+}
+/* four column */
+@media screen and (min-width: 38.5em) {
+	.primaryNav > ul > li {	max-width: 33%;	}
+}
+/* five column */
+@media screen and (min-width: 50em) {
+	.primaryNav > ul > li {	max-width: 25%;	}
+}
+/* six column */
+@media screen and (min-width: 61em) {
+	.primaryNav > ul > li {	max-width: 20%;	}
+}
+/* seven column */
+@media screen and (min-width: 73em) {
+	.primaryNav > ul > li {	max-width: 16.66%;	}
+}
+/* eight column */
+@media screen and (min-width: 84.5em) {
+	.primaryNav > ul > li {	max-width: 14.285%;	}
+}
+/* nine column */
+@media screen and (min-width: 96em) {
+	.primaryNav > ul > li {	max-width: 12.5%; }
+}
+/* ten column */
+@media screen and (min-width: 107.5em) {
+	.primaryNav > ul > li {	max-width: 11.11%; }
 }
