--- a/slickmap.css
+++ b/slickmap.css
@@ -41,120 +41,9 @@ body {
 	margin: 0 0 2em 0;
 
 }
-h1 {
-	font-weight: bold;
-	font-size: 1.25em;
-	margin: 0 0 .25em 0;
-}
-h2 {
-	font-size: .75em;
-	color: #777777;
-	margin: 0 0 1.25em 0;
-}
-h2 a {
-	color: #777777;
-}
-h2 a:hover {
-	color: #555555;
-}
-a {
-	text-decoration: none;
-}
-ol, ul {
-	list-style: none;
-}
 
 /* ------------------------------------------------------------
-	Lines
------------------------------------------------------------- */
-
-.primaryNav ul:before,
-.primaryNav ul:after,
-.primaryNav ul li:before,
-.primaryNav ul li:after {
-	display: block;
-	content: '';
-	position: absolute;
-	border-width: 0;
-	border-color: rgba(0,0,0,.1);
-	border-color: #e5e5e5;
-	border-style: solid;
-	z-index: -1;
-	// border-color: red;
-}
-.primaryNav > ul > li:before {
-	height: 1.375em;
-	top: -1.375em;;
-	right: calc(50% + .625em);
-	width: calc(100% - 2px);
-	border-top-width: 2px;
-	border-right-width: 2px;
-	// border-color: red;
-}
-.primaryNav > ul > li:first-child + li:before {
-	border-top-width: 0;
-	height: 5em;
-	top: -5em;
-	// border-color: red;
-}
-.primaryNav > ul > li:after {
-	// height: 1.75em;
-	// top: 0;
-	// right: 0;
-	// width: 1.25em;
-	// border-bottom-width: 2px;
-	// border-color: red;
-}
-.primaryNav ul ul li:after {
-	width: 50%;
-	height: .6875em;
-	top: 0;
-	right: 1px;
-	border-left-width: 2px;
-	//border-color: red;
-}
-.primaryNav ul ul li:first-child:before {
-	top: .6875em;
-	width: 50%;
-	height: 1.3125em;
-	right: 1px;
-	border-left-width: 2px;
-	// border-color: red;
-}
-.primaryNav > ul > li:last-child:after {
-	border-bottom-width: 0;
-}
-.primaryNav ul ul ul li:before {
-	width: calc(50% - 5px) !important;
-	height: calc(100% - 2px);
-	top: -50%;
-	left: 0;
-	border-left-width: 2px;
-	border-bottom-width: 2px;
-	// border-color: red;
-}
-.primaryNav ul ul ul li:first-child:before {
-	height: 53%;
-	top: auto;
-	bottom: calc(50% - 5px);
-	border-top-width: 2px;
-	// border-color: red;
-}
-.primaryNav ul ul ul:before {
-	width: 50%;
-	height: 1.25em;
-	top: -10px;
-	right: 1px;
-	border-left-width: 2px;
-	//border-color: red;
-}
-.primaryNav ul ul ul li:after {
-	border-width: 0;
-}
-
-
-/* ------------------------------------------------------------
-	Site Map Styles
+	Line Item Styles
 ------------------------------------------------------------ */
 
 /* --------	Top Level --------- */
@@ -173,13 +62,8 @@ ol, ul {
 .primaryNav #home:before {
 	display: none;
 }
-.primaryNav #home:after {
-
-}
-.primaryNav #home + li {
-
-}
 .primaryNav ul {
+	list-style: none;
 	display: flex;
 	flex-wrap: wrap;
 	position: relative;
@@ -193,14 +77,11 @@ ol, ul {
 .primaryNav > ul > li {
 	margin-top: 3em;
 }
-.primaryNav > ul > li:last-child {
-	//padding-right: 0;
-}
 .primaryNav li a {
 	margin: 0;
-	padding: 10px;
+	padding: .625em;
 	display: block;
-	font-size: 14px;
+	font-size: .875em;
 	font-weight: bold;
 	text-align: center;
 	color: black;
@@ -208,6 +89,7 @@ ol, ul {
 	border: 2px solid #b5d9ea;
 	border-radius: 5px;
 	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+	text-decoration: none;
 }
 .primaryNav li a:hover {
 	background-color: #e2f4fd;
@@ -288,6 +170,86 @@ a:visited:before {
 	font-size: .75em;
 }
 
+/* ------------------------------------------------------------
+	Connecting Lines:
+	Uncomment 'border-color: red' for debugging
+------------------------------------------------------------ */
+
+.primaryNav ul:before,
+.primaryNav ul:after,
+.primaryNav ul li:before,
+.primaryNav ul li:after {
+	display: block;
+	content: '';
+	position: absolute;
+	border-width: 0;
+	border-color: rgba(0,0,0,.1);
+	border-color: #e5e5e5;
+	border-style: solid;
+	z-index: -1;
+	/* border-color: red; */
+}
+.primaryNav > ul > li:before {
+	height: 1.375em;
+	top: -1.375em;;
+	right: calc(50% + .625em);
+	width: calc(100% - 2px);
+	border-top-width: 2px;
+	border-right-width: 2px;
+	/* border-color: red; */
+}
+.primaryNav > ul > li:first-child + li:before {
+	border-top-width: 0;
+	height: 5em;
+	top: -5em;
+	/* border-color: red; */
+}
+.primaryNav ul ul li:after {
+	width: 50%;
+	height: .6875em;
+	top: 0;
+	right: 1px;
+	border-left-width: 2px;
+	/*  border-color: red */;
+}
+.primaryNav ul ul li:first-child:before {
+	top: .6875em;
+	width: 50%;
+	height: 1.3125em;
+	right: 1px;
+	border-left-width: 2px;
+	/* border-color: red; */
+}
+.primaryNav > ul > li:last-child:after {
+	border-bottom-width: 0;
+}
+.primaryNav ul ul ul li:before {
+	width: calc(50% - 5px) !important;
+	height: calc(100% - 2px);
+	top: -50%;
+	left: 0;
+	border-left-width: 2px;
+	border-bottom-width: 2px;
+	/* border-color: red; */
+}
+.primaryNav ul ul ul li:first-child:before {
+	height: 53%;
+	top: auto;
+	bottom: calc(50% - 5px);
+	border-top-width: 2px;
+	/* border-color: red; */
+}
+.primaryNav ul ul ul:before {
+	width: 50%;
+	height: 1.25em;
+	top: -10px;
+	right: 1px;
+	border-left-width: 2px;
+	/* border-color: red; */
+}
+.primaryNav ul ul ul li:after {
+	border-width: 0;
+}
 
 /* ------------------------------------------------------------
 	Utility Navigation
@@ -299,6 +261,7 @@ a:visited:before {
 	margin-bottom: -.25em;
 	margin-right: 1.25em;
 	max-width: 48%;
+	list-style-type: none;
 }
 .utilityNav li {
 	padding: 0 0 .625em .625em;
@@ -317,6 +280,7 @@ a:visited:before {
 	background: #fff7aa url('images/white-highlight.png') top left repeat-x;
 	border-radius: 5px;
 	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+	text-decoration: none;
 }
 .utilityNav li a:hover {
 	background-color: #fffce5;
@@ -356,10 +320,11 @@ a:visited:before {
 	}
 }
 
-/* The media queries below keep grid column widths intact 
-when the page wraps to avoid them having a 100% width. 
+/* The media queries below keep grid column widths intact when
+the page wraps to avoid wrapped line items showing at 100% width. 
 These queries also make the homepage line item flex appropriately.
-For optimal layout, remove the queries you don't need. */
+When your sitemap is complete, remove the queries below that you 
+don't need, and your sitemap layout will function perfectly. */
 
 /* three column */
 @media screen and (min-width: 30em) {
