ADD: Fourth level, not yet complete

--- a/slickmap.css
+++ b/slickmap.css
@@ -87,7 +87,7 @@ body {
 	color: black;
 	background: #c3eafb url('images/white-highlight.png') top left repeat-x;
 	border: 2px solid #b5d9ea;
-	border-radius: 5px;
+	border-radius: 3px;
 	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 	text-decoration: none;
 }
@@ -169,6 +169,37 @@ a:visited:before {
 	color: #ccae14;
 	font-size: .75em;
 }
+/* --------	Fourth Level --------- */
+
+.primaryNav ul ul ul ul {
+	margin-top: 0em;
+	padding-top: .3125em;
+	padding-bottom: .3125em;
+}
+.primaryNav ul ul ul ul li {
+	padding-top: .3125em;
+	padding-bottom: .3125em;
+}
+.primaryNav ul ul ul ul li a {
+	background-color: violet;
+	border-color: purple;
+	font-size: .75em;
+	padding: .625em 0;
+	width: 80%;
+	margin-right: 0;
+	margin-left: auto;
+}
+.primaryNav ul ul ul ul li a:hover {
+	background-color: #fffce5;
+	border-color: #d1b62c;
+}
+.primaryNav ul ul ul ul li:first-child {
+	padding-top: 1em;
+}
+.primaryNav ul ul ul ul li a:link:before,
+.primaryNav ul ul ul ul li a:visited:before {
+	display: none;
+}
 
 /* ------------------------------------------------------------
 	Connecting Lines:
@@ -249,6 +280,18 @@ a:visited:before {
 }
 .primaryNav ul ul ul li:after {
 	border-width: 0;
+}
+
+
+
+.primaryNav ul ul ul ul li:before {
+	display: none;
+}
+.primaryNav ul ul ul ul li:first-child:before {
+	display: none;
+}
+.primaryNav ul ul ul ul:before {
+	display: none;
 }
 
 /* ------------------------------------------------------------
