--- a/slickmap.css
+++ b/slickmap.css
@@ -79,7 +79,7 @@ body {
 }
 .primaryNav li a {
 	margin: 0;
-	padding: .625em;
+	padding: .7142em .625em;
 	display: block;
 	font-size: .875em;
 	font-weight: bold;
@@ -88,7 +88,7 @@ body {
 	background: #c3eafb url('images/white-highlight.png') top left repeat-x;
 	border: 2px solid #b5d9ea;
 	border-radius: 3px;
-	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+	box-shadow: 1px 1px 2px rgba(0,0,0,0.5);
 	text-decoration: none;
 }
 .primaryNav li a:hover {
@@ -310,7 +310,7 @@ a:visited:before {
 	color: black;
 	background: #fff7aa url('images/white-highlight.png') top left repeat-x;
 	border-radius: 5px;
-	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+	box-shadow: 1px 1px 2px rgba(0,0,0,0.5);
 	text-decoration: none;
 }
 .utilityNav li a:hover {
