--- a/slickmap.css
+++ b/slickmap.css
@@ -288,7 +288,7 @@ a:visited:after {
 	font-weight: 700;
 	padding: .75em 1em;
 	font-weight: bold;
-	text-align: center;
+	text-align: left;
 	color: white;
 	background-color: #ff9d00;
 	border: 1px solid  rgba(0,0,0,.025);
