--- a/slickmap.css
+++ b/slickmap.css
@@ -306,7 +306,7 @@ a:visited:before {
 	font-size: .75em;
 	padding: .5em 1em;
 	font-weight: bold;
-	text-align: center;
+	text-align: left;
 	color: black;
 	background: #fff7aa url('images/white-highlight.png') top left repeat-x;
 	border-radius: 5px;
