--- a/slickmap-happygo.css
+++ b/slickmap-happygo.css
@@ -77,13 +77,15 @@ body {
 	margin-top: 3em;
 }
 .primaryNav li a {
+	pointer-events: none;
+	cursor: default;
 	margin: 0;
 	padding: .875em .9375em .9375em .9375em;
 	display: block;
 	font-size: .9375em;
 	font-weight: bold;
-	color: white;
-	background: #0090ff;
+	color: #FFA107;
+	background: #131255;
 	text-shadow: 0 0 10px rgba(0,0,0,.1);
 	border: 1px solid  rgba(0,0,0,.025);
 	box-shadow: 0px 2px 1px rgba(0,0,0,0.15);
@@ -115,10 +117,11 @@ body {
 	padding-right: 0;
 }
 .primaryNav ul ul li a {
-	background-color: #28bf5e;
+	color: white;
+	background-color: #A6A9B1;
 }
 .primaryNav ul ul li a:hover {
-	background-color: #09a63e;
+	background-color: #A6A9B1;
 }
 .primaryNav ul ul li:first-child {
 	padding-top: 2em;
@@ -271,8 +274,7 @@ body {
 ------------------------------------------------------------ */
 
 .utilityNav {
-	/* float: right; */
-	float: left;
+	float: right;
 	margin-top: 0;
 	margin-bottom: -.25em;
 	margin-right: 1.25em;
@@ -293,16 +295,14 @@ body {
 	font-weight: bold;
 	text-align: left;
 	color: white;
-	/* background-color: #ff9d00; */
-	background-color: #A6A9B1;
+	background-color: #ff9d00;
 	border: 1px solid  rgba(0,0,0,.025);
 	box-shadow: 0px 2px 0 rgba(0,0,0,0.15);
 	text-shadow: 0 0 10px rgba(0,0,0,.15);
 	text-decoration: none;
 }
 .utilityNav li a:hover {
-	/* background-color: #ff831b; */
-  background-color: #71747A;
+	background-color: #ff831b;
 }
 .utilityNav li a:link:after,
 .utilityNav li a:visited:after {
@@ -367,9 +367,9 @@ that you don't need, and your sitemap layout will work perfectly. */
 	.primaryNav > ul > li {	max-width: 16.66%;	}
 }
 /* seven column */
-/* @media screen and (min-width: 84.5em) {
+@media screen and (min-width: 84.5em) {
 	.primaryNav > ul > li {	max-width: 14.285%;	}
-} */
+}
 /* eight column */
 /* @media screen and (min-width: 96em) {
 	.primaryNav > ul > li {	max-width: 12.5%; }
