--- a/slickmap-yahoo.css
+++ b/slickmap-yahoo.css
@@ -367,8 +367,8 @@ that you don't need, and your sitemap layout will work perfectly. */
 }
 /* seven column */
 /* @media screen and (min-width: 84.5em) {
-	.primaryNav > ul > li {	max-width: 14.285%;	} */
-}
+	.primaryNav > ul > li {	max-width: 14.285%;	}
+} */
 /* eight column */
 /* @media screen and (min-width: 96em) {
 	.primaryNav > ul > li {	max-width: 12.5%; } */
