--- a/slickmap-skm.css
+++ b/slickmap-skm.css
@@ -138,7 +138,7 @@ body {
 	padding-bottom: .3125em;
 }
 .primaryNav ul ul ul li a {
-	background-color: #ff9d00;
+	background-color: #C0C2C8;
 	font-size: .75em;
 	padding: .75em;
 	width: 90%;
@@ -362,9 +362,9 @@ that you don't need, and your sitemap layout will work perfectly. */
 	.primaryNav > ul > li {	max-width: 20%;	}
 }
 /* six column */
-@media screen and (min-width: 73em) {
+/* @media screen and (min-width: 73em) {
 	.primaryNav > ul > li {	max-width: 16.66%;	}
-}
+} */
 /* seven column */
 /* @media screen and (min-width: 84.5em) {
 	.primaryNav > ul > li {	max-width: 14.285%;	}
