--- a/slickmap-skm.css
+++ b/slickmap-skm.css
@@ -117,7 +117,7 @@ body {
 	padding-right: 0;
 }
 .primaryNav ul ul li a {
-	background-color: #A6A9B1;
+	background-color: #7A7D85;
 }
 .primaryNav ul ul li a:hover {
 	background-color: #09a63e;
@@ -138,7 +138,7 @@ body {
 	padding-bottom: .3125em;
 }
 .primaryNav ul ul ul li a {
-	background-color: #C0C2C8;
+	background-color: #989CA5;
 	font-size: .75em;
 	padding: .75em;
 	width: 90%;
